--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- 引入css文件 -->
   <link rel="stylesheet" href="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/common.css">
   <title>首页</title>
 </head>
 
@@ -52,23 +54,28 @@
     </div>
   </div>
 
-  <!-- 页面内容 -->
-
-
-
-  <!-- 页脚 -->
-  <footer class="mdui-color-light-blue-200" style="position: absolute; bottom: 0; height: 80px;width: 100%">
-    <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+  <div class="wrapper">
+    <div class="main-wrapper">
+      <!-- 页面内容 -->
     </div>
-  </footer>
+    <!-- 页脚 -->
+    <footer class="mdui-color-light-blue-200">
+      <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
+        <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
+        <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
+        <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
+        <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+      </div>
+    </footer>
+  </div>
+
 
   <!-- 引入js文件 -->
+  <script src="http://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
+  <script src="js/unslider.min.js"></script>
   <script src="js/common.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
