--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -54,19 +54,46 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper mdui-container">
     <div class="main-wrapper">
       <!-- 页面内容 -->
-    </div>
-    <!-- 页脚 -->
-    <footer class="mdui-color-light-blue-200">
-      <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-        <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-        <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+      <!-- 广告轮播图 -->
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <div class="slider" id="slider1">
+            <ul>
+              <li><img src="images/1.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/2.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/3.jpg" alt="" width="80%" height="400"></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </footer>
+
+      <!-- 企业推荐轮播图 -->
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <div class="slider" id="slider2">
+            <ul>
+              <li><img src="images/1.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/2.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/3.jpg" alt="" width="80%" height="400"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 页脚 -->
+  <footer class="mdui-color-light-blue-200">
+    <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
+      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
+      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+    </div>
+  </footer>
   </div>
 
 
