--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -53,9 +53,10 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper mdui-container">
     <div class="main-wrapper">
       <!-- 页面内容 -->
+      11
     </div>
     <!-- 页脚 -->
     <footer class="mdui-color-light-blue-200">
