--- a/租赁网站/enterpriseinfo.html
+++ b/租赁网站/enterpriseinfo.html
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper mdui-container">
     <div class="main-wrapper">
       <!-- 页面内容 -->
     </div>
