--- a/租赁网站/leaseinfo.html
+++ b/租赁网站/leaseinfo.html
@@ -53,9 +53,10 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper mdui-container">
     <div class="main-wrapper">
       <!-- 页面内容 -->
+      <img src="images/3.jpg" width="100%">
     </div>
     <!-- 页脚 -->
     <footer class="mdui-color-light-blue-200">
