--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="wrapper mdui-container">
+  <div class="wrapper mdui-container-fluid">
     <div class="main-wrapper">
       <!-- 页面内容 -->
       <!-- 广告轮播图 -->
@@ -62,9 +62,9 @@
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
           <div class="slider" id="slider1">
             <ul>
-              <li><img src="images/1.jpg" alt="" width="80%" height="400"></li>
-              <li><img src="images/2.jpg" alt="" width="80%" height="400"></li>
-              <li><img src="images/3.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/1.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/2.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/3.jpg" alt="" width="100%" height="400"></li>
             </ul>
           </div>
         </div>
@@ -75,26 +75,97 @@
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
           <div class="slider" id="slider2">
             <ul>
-              <li><img src="images/1.jpg" alt="" width="80%" height="400"></li>
-              <li><img src="images/2.jpg" alt="" width="80%" height="400"></li>
-              <li><img src="images/3.jpg" alt="" width="80%" height="400"></li>
+              <li><img src="images/1.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/2.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/3.jpg" alt="" width="100%" height="400"></li>
             </ul>
           </div>
         </div>
       </div>
+
+      <!-- 产品推荐轮播图 -->
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <div class="slider" id="slider3">
+            <ul>
+              <li><img src="images/1.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/2.jpg" alt="" width="100%" height="400"></li>
+              <li><img src="images/3.jpg" alt="" width="100%" height="400"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdui-row mdui-m-y-2">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <ul class="mdui-list mdui-shadow-10">
+            <h1>最新咨询</h1>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">咨询</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">咨询</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">咨询</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">咨询</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="mdui-row mdui-m-y-2">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <ul class="mdui-list mdui-shadow-10">
+            <h1>出租信息</h1>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">一条出租信息</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">一条出租信息</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">一条出租信息</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">一条出租信息</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="mdui-row mdui-m-y-2">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <ul class="mdui-list mdui-shadow-10">
+            <h1>求租信息</h1>
+            <li class="mdui-list-item mdui-ripple">
+              <a class="mdui-list-item-content">一条求租信息</a>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">一条求租信息</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">一条求租信息</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+              <div class="mdui-list-item-content">一条求租信息</div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+    <!-- 页脚 -->
+    <footer class="mdui-color-light-blue-200">
+      <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
+        <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
+        <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
+        <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
+        <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+      </div>
+    </footer>
   </div>
 
-  <!-- 页脚 -->
-  <footer class="mdui-color-light-blue-200">
-    <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
-    </div>
-  </footer>
-  </div>
+
 
 
   <!-- 引入js文件 -->
