--- a/租赁网站/enterpriseinfo.html
+++ b/租赁网站/enterpriseinfo.html
@@ -11,10 +11,10 @@
   <title>企业信息</title>
 </head>
 
-<body class="mdui-loaded mdui-theme-primary-light-blue">
+<body class="mdui-loaded mdui-appbar-with-toolbar mdui-theme-primary-light-blue">
 
   <!-- 页首 -->
-  <div class="mdui-appbar">
+  <div class="mdui-appbar mdui-appbar-scroll-toolbar-hide">
     <div class="mdui-toolbar mdui-color-light-blue-200">
       <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="index.html" class="mdui-typo-title">Title</a>
@@ -56,18 +56,36 @@
   <div class="wrapper mdui-container-fluid">
     <div class="main-wrapper">
       <!-- 页面内容 -->
-    </div>
-    <!-- 页脚 -->
-    <footer class="mdui-color-light-blue-200">
-      <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-        <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-        <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+      <div class="enterprise-list">
+        <div class="mdui-row mdui-m-y-2">
+          <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+            <h1 style="text-align: center;">企业信息</h1>
+            <ul class="mdui-list mdui-shadow-10">
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </footer>
-  </div>
+    </div>
 
+  </div>
+  <!-- 页脚 -->
+  <footer class="mdui-color-light-blue-200">
+    <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
+      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
+      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+    </div>
+  </footer>
 
 
 
