--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -11,10 +11,10 @@
   <title>求租信息</title>
 </head>
 
-<body class="mdui-loaded mdui-theme-primary-light-blue">
+<body class="mdui-loaded mdui-appbar-with-toolbar mdui-theme-primary-light-blue">
 
   <!-- 页首 -->
-  <div class="mdui-appbar">
+  <div class="mdui-appbar mdui-appbar-scroll-toolbar-hide">
     <div class="mdui-toolbar mdui-color-light-blue-200">
       <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="index.html" class="mdui-typo-title">Title</a>
@@ -58,16 +58,18 @@
       <!-- 页面内容 -->
       11
     </div>
-    <!-- 页脚 -->
-    <footer class="mdui-color-light-blue-200">
-      <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
-        <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
-        <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
-        <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
-      </div>
-    </footer>
+
   </div>
+  <!-- 页脚 -->
+  <footer class="mdui-color-light-blue-200">
+    <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
+      <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
+      <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">地址信息</span>
+      <span style="margin-top: 6px; font-size: 12px;">相关备案号</span>
+    </div>
+  </footer>
+
   <!-- 引入js文件 -->
   <script src="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
   <script src="js/common.js"></script>
