--- a/租赁网站/rentinginfo.html
+++ b/租赁网站/rentinginfo.html
@@ -11,10 +11,10 @@
   <title>求租信息</title>
 </head>
 
-<body class="mdui-loaded mdui-appbar-with-toolbar mdui-theme-primary-light-blue">
+<body class="mdui-loaded mdui-theme-primary-light-blue">
 
   <!-- 页首 -->
-  <div class="mdui-appbar mdui-appbar-scroll-toolbar-hide">
+  <div class="mdui-appbar">
     <div class="mdui-toolbar mdui-color-light-blue-200">
       <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="index.html" class="mdui-typo-title">Title</a>
