--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -15,7 +15,7 @@
 <body class="mdui-loaded mdui-appbar-with-toolbar mdui-theme-primary-light-blue" style="margin:0;padding:0;">
 
   <!-- 页首 -->
-  <div class="mdui-appbar mdui-appbar-scroll-toolbar-hide">
+  <div class="mdui-appbar">
     <div class="mdui-toolbar mdui-color-light-blue-200">
       <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
       <a href="index.html" class="mdui-typo-title">Title</a>
