--- a/租赁网站/personalcenter.html
+++ b/租赁网站/personalcenter.html
@@ -13,7 +13,7 @@
 
 <body class="mdui-loaded mdui-drawer-body-left">
   <!-- 页首 -->
-  <header class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-toolbar-hide">
+  <header class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
     <div class="mdui-toolbar mdui-color-light-blue-200">
       <a href="index.html" class="mdui-btn mdui-btn-icon">
         <i class="mdui-icon material-icons">menu</i>
