--- a/租赁网站/enterpriseinfo.html
+++ b/租赁网站/enterpriseinfo.html
@@ -70,6 +70,18 @@
               <li class="mdui-list-item mdui-ripple">
                 <div class="mdui-center">一条企业信息</div>
               </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
+              <li class="mdui-list-item mdui-ripple">
+                <div class="mdui-center">一条企业信息</div>
+              </li>
             </ul>
           </div>
         </div>
