--- a/租赁网站/index.html
+++ b/租赁网站/index.html
@@ -15,41 +15,48 @@
 <body class="mdui-loaded mdui-appbar-with-toolbar mdui-theme-primary-light-blue" style="margin:0;padding:0;">
 
   <!-- 页首 -->
-  <div class="mdui-appbar">
-    <div class="mdui-toolbar mdui-color-light-blue-200">
-      <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
-      <a href="index.html" class="mdui-typo-title">Title</a>
-      <div class="mdui-toolbar-spacer"></div>
-      <div id="user-status">
+  <div class="mdui-appbar mdui-shadow-1">
+    <div class="mdui-container-fluid">
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <div class="mdui-toolbar mdui-color-white">
+            <a href="index.html" class="mdui-btn mdui-btn-icon"><img class="mdui-icon material-icons" src="images/logo.png"></a>
+            <a href="index.html" class="mdui-typo-title">脚手架租赁网站</a>
+            <div class="mdui-toolbar-spacer"></div>
+            <div id="user-status">
+            </div>
+          </div>
+          <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-white" mdui-tab>
+            <a href="index.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">首页</a>
+            <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white">出租信息</a>
+            <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
+            <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="mdui-tab mdui-color-light-blue-200" mdui-tab>
-      <a href="index.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">首页</a>
-      <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white">出租信息</a>
-      <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
-      <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
-    </div>
-    <div id="tologin" class="mdui-dialog mdui-dialog-open" style="display: none; top: 75px; height: 400px; width: 400px">
-      <button class="mdui-btn mdui-btn-icon mdui-text-color-light-blue-200 close">
-        <i class="mdui-icon material-icons">close</i>
-      </button>
-      <div class="mdui-dialog-title">登录</div>
-      <div style="margin:30px;">
-        <div class="mdui-textfield">
-          <input class="mdui-textfield-input" name="username" type="text" placeholder="用户名"">
+  </div>
+
+  <div id="tologin" class="mdui-dialog mdui-dialog-open" style="display: none; top: 75px; height: 400px; width: 400px">
+    <button class="mdui-btn mdui-btn-icon mdui-text-color-light-blue-200 close">
+      <i class="mdui-icon material-icons">close</i>
+    </button>
+    <div class="mdui-dialog-title">登录</div>
+    <div style="margin:30px;">
+      <div class="mdui-textfield">
+        <input class="mdui-textfield-input" name="username" type="text" placeholder="用户名"">
         </div>
         <div class="
-            mdui-textfield">
-          <input class="mdui-textfield-input" name="password" type="password" placeholder="密码">
-        </div>
-        <div class="mdui-clearfix" style="margin-top: 50px;">
-          <button class="mdui-btn mdui-ripple more-option" type="button" mdui-menu="{target: '#mc-login-menu', position: 'top', covered: true}">更多选项</button>
-          <ul class="mdui-menu" id="mc-login-menu" style="transform-origin: 0px 100% 0px; position: fixed; top: 366px; left: 24px;">
-            <li class="mdui-menu-item"><a class="mdui-ripple mc-password-reset-trigger">忘记密码</a></li>
-            <li class="mdui-menu-item"><a class="mdui-ripple mc-register-trigger">创建新账号</a></li>
-          </ul>
-          <button onclick="Login()" class="mdui-btn mdui-btn-raised mdui-color-light-blue-200 mdui-float-right" style="margin-right: 30px">登录</button>
-        </div>
+          mdui-textfield">
+        <input class="mdui-textfield-input" name="password" type="password" placeholder="密码">
+      </div>
+      <div class="mdui-clearfix" style="margin-top: 50px;">
+        <button class="mdui-btn mdui-ripple more-option" type="button" mdui-menu="{target: '#mc-login-menu', position: 'top', covered: true}">更多选项</button>
+        <ul class="mdui-menu" id="mc-login-menu" style="transform-origin: 0px 100% 0px; position: fixed; top: 366px; left: 24px;">
+          <li class="mdui-menu-item"><a class="mdui-ripple mc-password-reset-trigger">忘记密码</a></li>
+          <li class="mdui-menu-item"><a class="mdui-ripple mc-register-trigger">创建新账号</a></li>
+        </ul>
+        <button onclick="Login()" class="mdui-btn mdui-btn-raised mdui-color-light-blue-200 mdui-float-right" style="margin-right: 30px">登录</button>
       </div>
     </div>
   </div>
@@ -71,7 +78,7 @@
       </div>
 
       <!-- 企业推荐轮播图 -->
-      <div class="mdui-row">
+      <!-- <div class="mdui-row">
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
           <div class="slider" id="slider2">
             <ul>
@@ -81,10 +88,10 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- 产品推荐轮播图 -->
-      <div class="mdui-row">
+      <!-- <div class="mdui-row">
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
           <div class="slider" id="slider3">
             <ul>
@@ -94,12 +101,12 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- 最新资讯 -->
       <div class="mdui-row mdui-m-y-2">
-        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
-          <ul class="mdui-list mdui-shadow-10">
+        <div class="mdui-col-xs-5 mdui-col-offset-xs-6">
+          <ul class="mdui-list mdui-shadow-1">
             <div class="info-head">
               <h2 class="title">最新咨询</h2>
               <a class="more mdui-text-color-black-text mdui-btn mdui-ripple">查看更多</a>
@@ -123,7 +130,7 @@
       <!-- 今日动态 -->
       <div class="mdui-row mdui-m-y-2">
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
-          <ul class="mdui-list mdui-shadow-10">
+          <ul class="mdui-list mdui-shadow-1">
             <div class="info-head">
               <h2 class="title">今日动态</h2>
               <a class="more mdui-text-color-black-text">成交数量：4件</a>
@@ -147,7 +154,7 @@
       <!-- 求租信息 -->
       <div class="mdui-row mdui-m-y-2">
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
-          <ul class="mdui-list mdui-shadow-10">
+          <ul class="mdui-list mdui-shadow-1">
             <div class="info-head">
               <h2 class="title">求租信息</h2>
               <a class="more mdui-text-color-black-text mdui-btn mdui-ripple">查看更多</a>
@@ -173,7 +180,7 @@
         <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
           <div class="mdui-row-xs-2">
             <div class="mdui-col">
-              <ul class="mdui-list mdui-shadow-10">
+              <ul class="mdui-list mdui-shadow-1">
                 <div class="info-head">
                   <h2 class="title">塔吊出租信息</h2>
                   <a class="more mdui-text-color-black-text mdui-btn mdui-ripple">查看更多</a>
@@ -193,7 +200,7 @@
               </ul>
             </div>
             <div class="mdui-col">
-              <ul class="mdui-list mdui-shadow-10">
+              <ul class="mdui-list mdui-shadow-1">
                 <div class="info-head">
                   <h2 class="title">脚手架出租信息</h2>
                   <a class="more mdui-text-color-black-text mdui-btn mdui-ripple">查看更多</a>
@@ -220,7 +227,7 @@
 
   </div>
   <!-- 页脚 -->
-  <footer class="mdui-color-light-blue-200">
+  <footer class="mdui-color-grey-300">
     <div class="site-info mdui-text-color-black-secondary" style="text-align: center;display: flex;justify-content: center;flex-direction: column;">
       <span style="margin-top: 6px; font-size: 12px;">版权信息</span>
       <span style="margin-top: 6px;font-size: 12px;">联系信息</span>
