--- a/租赁网站/leaseinfo.html
+++ b/租赁网站/leaseinfo.html
@@ -14,51 +14,201 @@
 <body class="mdui-loaded mdui-theme-primary-light-blue">
 
   <!-- 页首 -->
-  <div class="mdui-appbar">
-    <div class="mdui-toolbar mdui-color-light-blue-200">
-      <a href="index.html" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
-      <a href="index.html" class="mdui-typo-title">Title</a>
-      <div class="mdui-toolbar-spacer"></div>
-      <div id="user-status">
+  <div class="mdui-appbar mdui-shadow-1">
+    <div class="mdui-container-fluid">
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <div class="mdui-toolbar mdui-color-white">
+            <a href="index.html" class="mdui-btn mdui-btn-icon"><img class="mdui-icon material-icons" src="images/logo.png"></a>
+            <a href="index.html" class="mdui-typo-title">脚手架租赁网站</a>
+            <div class="mdui-toolbar-spacer"></div>
+            <div id="user-status">
+            </div>
+          </div>
+          <div class="mdui-tab mdui-tab-centered mdui-tab-full-width mdui-color-white" mdui-tab>
+            <a href="index.html" class="mdui-ripple mdui-ripple-white ">首页</a>
+            <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">出租信息</a>
+            <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
+            <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="mdui-tab mdui-color-light-blue-200" mdui-tab>
-      <a href="index.html" class="mdui-ripple mdui-ripple-white">首页</a>
-      <a href="leaseinfo.html" class="mdui-ripple mdui-ripple-white mdui-tab-active">出租信息</a>
-      <a href="rentinginfo.html" class="mdui-ripple mdui-ripple-white">求租信息</a>
-      <a href="enterpriseinfo.html" class="mdui-ripple mdui-ripple-white">企业信息</a>
-    </div>
-    <div id="tologin" class="mdui-dialog mdui-dialog-open" style="display: none; top: 75px; height: 400px; width: 400px">
-      <button class="mdui-btn mdui-btn-icon mdui-text-color-light-blue-200 close">
-        <i class="mdui-icon material-icons">close</i>
-      </button>
-      <div class="mdui-dialog-title">登录</div>
-      <div style="margin:30px;">
-        <div class="mdui-textfield">
-          <input class="mdui-textfield-input" name="username" type="text" placeholder="用户名"">
+  </div>
+
+  <div id="tologin" class="mdui-dialog mdui-dialog-open" style="display: none; top: 75px; height: 400px; width: 400px">
+    <button class="mdui-btn mdui-btn-icon mdui-text-color-light-blue-200 close">
+      <i class="mdui-icon material-icons">close</i>
+    </button>
+    <div class="mdui-dialog-title">登录</div>
+    <div style="margin:30px;">
+      <div class="mdui-textfield">
+        <input class="mdui-textfield-input" name="username" type="text" placeholder="用户名"">
         </div>
         <div class="
-            mdui-textfield">
-          <input class="mdui-textfield-input" name="password" type="password" placeholder="密码">
-        </div>
-        <div class="mdui-clearfix" style="margin-top: 50px;">
-          <button class="mdui-btn mdui-ripple more-option" type="button" mdui-menu="{target: '#mc-login-menu', position: 'top', covered: true}">更多选项</button>
-          <ul class="mdui-menu" id="mc-login-menu" style="transform-origin: 0px 100% 0px; position: fixed; top: 366px; left: 24px;">
-            <li class="mdui-menu-item"><a class="mdui-ripple mc-password-reset-trigger">忘记密码</a></li>
-            <li class="mdui-menu-item"><a class="mdui-ripple mc-register-trigger">创建新账号</a></li>
-          </ul>
-          <button onclick="Login()" class="mdui-btn mdui-btn-raised mdui-color-light-blue-200 mdui-float-right" style="margin-right: 30px">登录</button>
-        </div>
+          mdui-textfield">
+        <input class="mdui-textfield-input" name="password" type="password" placeholder="密码">
+      </div>
+      <div class="mdui-clearfix" style="margin-top: 50px;">
+        <button class="mdui-btn mdui-ripple more-option" type="button" mdui-menu="{target: '#mc-login-menu', position: 'top', covered: true}">更多选项</button>
+        <ul class="mdui-menu" id="mc-login-menu" style="transform-origin: 0px 100% 0px; position: fixed; top: 366px; left: 24px;">
+          <li class="mdui-menu-item"><a class="mdui-ripple mc-password-reset-trigger">忘记密码</a></li>
+          <li class="mdui-menu-item"><a class="mdui-ripple mc-register-trigger">创建新账号</a></li>
+        </ul>
+        <button onclick="Login()" class="mdui-btn mdui-btn-raised mdui-color-light-blue-200 mdui-float-right" style="margin-right: 30px">登录</button>
       </div>
     </div>
   </div>
 
   <div class="wrapper mdui-container-fluid">
     <div class="main-wrapper">
-      <!-- 页面内容 -->
-      <img src="images/3.jpg" width="100%">
-    </div>
+      <div class="mdui-row">
+        <div class="mdui-col-xs-10 mdui-col-offset-xs-1">
+          <!--搜索-->
+          <div class="mdui-row mdui-m-y-4">
+            <div class="mdui-col-xs-12">
+              <div class="mdui-row-xs-5">
+                <div class="mdui-col mdui-center">
+                  <span class="mdui-chip-title">所在地区：</span>
+                  <select class="mdui-select" mdui-select="{position: 'bottom'}">
+                    <option value="1">江苏</option>
+                    <option value="2">山东</option>
+                    <option value="3" disabled>西藏</option>
+                    <option value="4">北京</option>
+                    <option value="5">上海</option>
+                    <option value="6">深圳</option>
+                  </select>
+                </div>
 
+                <div class="mdui-col mdui-center">
+                  <span class="mdui-chip-title">所属类别：</span>
+                  <select class="mdui-select" mdui-select="{position: 'bottom'}">
+                    <option value="1">日用品</option>
+                    <option value="2">电器</option>
+                    <option value="4">1</option>
+                    <option value="5">2</option>
+                  </select>
+                </div>
+
+                <div class="mdui-col mdui-center">
+                  <input class="mdui-textfield-input" type="text" placeholder="关键字词" />
+                </div>
+
+                <div class="mdui-col mdui-center">
+                  <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center">搜索</button>
+                </div>
+
+                <div class="mdui-col mdui-center">
+                  <a class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-light-blue-200 mdui-ripple mdui-center"
+                    href="">发布求租信息</a>
+                </div>
+
+              </div>
+
+            </div>
+
+
+
+          </div>
+
+          <!--列表-->
+          <div class="mdui-table-fluid">
+            <table class="mdui-table mdui-table-hoverable">
+              <thead>
+                <tr>
+                  <th>
+                    <p>物品类别</p>
+                  </th>
+                  <th>
+                    <p>数量</p>
+                  </th>
+                  <th>
+                    <p>联系方式</p>
+                  </th>
+                  <th>
+                    <p>所属公司</p>
+                  </th>
+                  <th>
+                    <p>地区</p>
+                  </th>
+                </tr>
+              </thead>
+
+              <tbody onclick="ToSpecificRenting()">
+                <tr onclick="ToSpecificRenting()">
+                  <td>
+                    <p>脚手架</p>
+                  </td>
+                  <td>
+                    <p>2</p>
+                  </td>
+                  <td>
+                    <p>手机号</p>
+                  </td>
+                  <td>
+                    <p>南京某公司</p>
+                  </td>
+                  <td>
+                    <p>南京市</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>脚手架</p>
+                  </td>
+                  <td>
+                    <p>2</p>
+                  </td>
+                  <td>
+                    <p>手机号</p>
+                  </td>
+                  <td>
+                    <p>南京某公司</p>
+                  </td>
+                  <td>
+                    <p>南京市</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>脚手架</p>
+                  </td>
+                  <td>
+                    <p>2</p>
+                  </td>
+                  <td>
+                    <p>手机号</p>
+                  </td>
+                  <td>
+                    <p>南京某公司</p>
+                  </td>
+                  <td>
+                    <p>南京市</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p>脚手架</p>
+                  </td>
+                  <td>
+                    <p>2</p>
+                  </td>
+                  <td>
+                    <p>手机号</p>
+                  </td>
+                  <td>
+                    <p>南京某公司</p>
+                  </td>
+                  <td>
+                    <p>南京市</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- 页脚 -->
   <footer class="mdui-color-light-blue-200">
